--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -16,31 +16,31 @@
 
 &emsp;
 
-“这是家母托我送来的的一点礼物，还请校长您能收下。”
+「这是家母托我送来的的一点礼物，还请校长您能收下。」
 
-“你这么说可就见外了，政树。这所学校能够有如此积极向上的氛围，你母亲在其中可是起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。”
+「你这么说可就见外了，政树。这所学校能够有如此积极向上的氛围，你母亲在其中可是起了相当大的贡献作用。哪怕过了二十多年，学校里也还流传着《黑衣学生会长》的传说呢。」
 
 面前这位语调和蔼，头发花白的女性，便是这所学校的校长入江范子——在那个女人就读这所学校的三年中，入江校长一直是她的班主任。拜这一关系所赐，我曾随那个女人数次到校长的府上拜访。
 
-“哪里哪里，家母曾对我说，多亏了您当年的教导，才有了现在的她。这份礼物也是她的一点敬意。”
+「哪里哪里，家母曾对我说，多亏了您当年的教导，才有了现在的她。这份礼物也是她的一点敬意。」
 
-“政树你的这个作风，倒是和你母亲很像呢。对了，教务主任昨天到我这里送了一份高等部的分班表，你要不要看一下？”
+「政树你的这个作风，倒是和你母亲很像呢。对了，教务主任昨天到我这里送了一份高等部的分班表，你要不要看一下？」
 
-“那就恭敬不如从命了。”
+「那就恭敬不如从命了。」
 
 我接过入江校长递过来的分班表，没过一分钟就在上面找到了自己的名字。
 
 雨宫政树（Amamiya Masaki）。一年A班。出席号码——不出意外是1号。
 
-“非常感谢。入江校长，我听家母说学校里似乎有个放了一架钢琴的教室……”
+「非常感谢。入江校长，我听家母说学校里似乎有个放了一架钢琴的教室……」
 
-“说的是**那间房间**对吧，你母亲的记忆力可真好。虽然有人定期维护，不过这二十多年来，那个房间还从没有学生进去过。”
+「说的是**那间房间**对吧，你母亲的记忆力可真好。虽然有人定期维护，不过这二十多年来，那个房间还从没有学生进去过。」
 
 入江校长露出了若有所思的表情，随后继续说道：
 
-“你是打算借那个房间练习钢琴吗？”
+「你是打算借那个房间练习钢琴吗？」
 
-“是的。虽然并没有将其作为职业的打算，但家母还是觉得我丢下这门技术不是太好。”
+「是的。虽然并没有将其作为职业的打算，但家母还是觉得我丢下这门技术不是太好。」
 
 ——另一个不想说出口的理由是，这也算我转移自身注意力（逃离这个世界）的一个手段。
 
@@ -48,13 +48,13 @@
 
 过了大约五分钟，她才将视线从密布的云层收回，从口袋中取出钥匙，打开办公桌一侧的抽屉，从其中取出一张卡片放在了办公桌上。
 
-“如果你需要的话，就用这张卡吧。你母亲在这里的时候也一直带着这张卡，不过毕业的时候她就还给我了。”
+「如果你需要的话，就用这张卡吧。你母亲在这里的时候也一直带着这张卡，不过毕业的时候她就还给我了。」
 
 我拿起卡片，正面和一般的学生卡一样印有先前在主入口看到的那行字和学校的全景照片。然而，卡的背面却是一片空白——和一般印有姓名、编号和照片的学生卡完全不同，这让我心中顿生疑窦。
 
-“校长，这样真的好吗？”
+「校长，这样真的好吗？」
 
-“我相信身为她儿子的你，不会做出违反学校纪律的事。而且，既然信任一个人，就应该信任到底。”
+「我相信身为她儿子的你，不会做出违反学校纪律的事。而且，既然信任一个人，就应该信任到底。」
 
 细细品味着校长话语中重量的我，想起了一句经常见到的话。
 
@@ -62,17 +62,17 @@
 
 反过来，背负的责任越重，就需要表现出更强的能力。意识到这一点的我，向校长深鞠了一躬。
 
-“非常感谢您的信任，我会将您今天教导我的话铭记于心。不过，随身携带这张卡可能会引起不必要的注意，请问我是否可以向您申请将这张卡的权限复制到我本人的学生卡上，再将这张卡还回来？”
+「非常感谢您的信任，我会将您今天教导我的话铭记于心。不过，随身携带这张卡可能会引起不必要的注意，请问我是否可以向您申请将这张卡的权限复制到我本人的学生卡上，再将这张卡还回来？」
 
-“没关系，你稍等一下吧。”
+「没关系，你稍等一下吧。」
 
 入江校长从办公桌上的打印机托盘中抽出一张纸，在上面写下一段内容，签字盖章之后，示意我将文件取走。
 
 确认获得复制卡片权限许可后，我再次向校长鞠了一躬。
 
-“感谢您的好意，那么我就先行告退了。”
+「感谢您的好意，那么我就先行告退了。」
 
-“我很期待政树你的新生代表致辞哦。”
+「我很期待政树你的新生代表致辞哦。」
 
 抬起上半身的我，看到了入江校长的微笑。随后我将文件折起放入书包，把空白卡片塞入裤子左侧的口袋，离开了校长办公室，反身将房门轻轻关好。
 
@@ -82,7 +82,7 @@
 
 唯独铭记在心的，是绝不可滥用这张空白卡片具备的权限——在一年A班的门前纠结许久的我，最终在走廊上又站了二十来分钟。等到有老师前来刷卡打开教室前后的门的时候，手机上显示的时间已经到了7点15分。
 
-走进空无一人的教室中的我，自然不需要说什么“你好”之类的问候话语，而是径直坐在离门口最近的座位上，把书包挂在桌边，继续翻阅手中的笔记本。
+走进空无一人的教室中的我，自然不需要说什么「你好」之类的问候话语，而是径直坐在离门口最近的座位上，把书包挂在桌边，继续翻阅手中的笔记本。
 
 笔记本上写着新生代表致辞的详细提纲。得益于那个女人提供的参考资料，我在之前的三四天里便将大致的内容构思完毕——但在构思的过程中，我曾数次陷入烦恼。
 
@@ -114,67 +114,67 @@
 >
 > 在调动听众情绪时，通过调节速度和力度，让听众们为他们听到的内容而沉醉。绝不可吝惜自己的体力和精神力。
 >
-> 必要时，要站在听众们中间演讲，营造出“我和你们在一起”的氛围。除此之外，也可以选择从听众中而非演讲台后面走到台上。
+> 必要时，要站在听众们中间演讲，营造出「我和你们在一起」的氛围。除此之外，也可以选择从听众中而非演讲台后面走到台上。
 
-拜那个女人的教育方针所赐，我曾在小学期间随她的一位朋友学习过数年声乐和钢琴。后者姑且不论，前者让我在初中时，曾被音乐老师评价为“有着和其他人截然不同的声音”——当时学校的合唱部有意招募我加入，但我在思考一番后还是拒绝了。
+拜那个女人的教育方针所赐，我曾在小学期间随她的一位朋友学习过数年声乐和钢琴。后者姑且不论，前者让我在初中时，曾被音乐老师评价为「有着和其他人截然不同的声音」——当时学校的合唱部有意招募我加入，但我在思考一番后还是拒绝了。
 
 现在一想，自己的嗓音说不准可以成为此后生活（战斗）时的武器。就用这次的新生代表致辞来实验一番好了。
 
 与初中时代不同，我并没有在高中三年的生活中与同学们拉开太大距离的打算——或者说，至少要将自己的这番冷淡态度加以掩盖，让同学们产生我是个可以友好相处的人的印象。而身为新生代表进行致辞，便是这一伪装工作的第一步。
 
-“初次见面，从座位看你就是……”
+「初次见面，从座位看你就是……」
 
 一个男生的声音闯入了我的耳朵。我抬起头，发现教室里多了几个人，而发出声音的那个男生就站在我的课桌旁边。从他说出的内容来看，他大概已经知道了我的身份。
 
-“我是雨宫政树。这一年请多多关照。”
+「我是雨宫政树。这一年请多多关照。」
 
 从座位上站起的我，露出不知算真心还是应付的笑容回应。
 
-“请多关照，我是工藤俊雄（Kudou Toshio）。之前似乎没见过你，是从外面考进来的吗？”
+「请多关照，我是工藤俊雄（Kudou Toshio）。之前似乎没见过你，是从外面考进来的吗？」
 
-“对，我是外部编入生。”
+「对，我是外部编入生。」
 
-“那可真不容易啊，毕竟相比校内的中等部学生们还多了一轮考试，而且每年能考进来的人可不多。”
+「那可真不容易啊，毕竟相比校内的中等部学生们还多了一轮考试，而且每年能考进来的人可不多。」
 
 高等部的外部编入考试招生名额，是根据中等部每一年退学或是考到其他高中去的学生人数决定的。因此想要从外部考入这所学校，可以说是难上加难。据称还发生过一两次因没有名额而不接受外部学生考入的情况——按那个女人的说法，这可以说是相当大的不幸了。
 
-“说起来，外部编入考试的那天……嗯，对，是那天没错。我中午去小餐厅的时候，看到楼下大厅里有一对超漂亮的双胞胎姐妹抱在一起哭得稀里哗啦的。我当时上去安慰了一下，听她们中的一个对我讲，教室里有一个写字速度快得吓人的男生，自己完全跟不上他。越往后她内心的精神压力就越大，最后连题都没能答完。”
+「说起来，外部编入考试的那天……嗯，对，是那天没错。我中午去小餐厅的时候，看到楼下大厅里有一对超漂亮的双胞胎姐妹抱在一起哭得稀里哗啦的。我当时上去安慰了一下，听她们中的一个对我讲，教室里有一个写字速度快得吓人的男生，自己完全跟不上他。越往后她内心的精神压力就越大，最后连题都没能答完。」
 
 还有这回事？我在脑海中搜索了一下。工藤所说的那天上午——考的应该是数学。在响铃收卷的时候，考场中的确有五六个人还没停笔，就直接被监考老师收走了答题纸。当场嚎啕大哭的学生的确有，但我也不记得是哪几个了。
 
-“那她们后来考上了吗？”
+「那她们后来考上了吗？」
 
 听到我的问题，工藤摇了摇头。
 
-“我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的人气排行榜就有新的乐子看了。”
+「我当时问了名字。不过嘛，刚才我把八个班的学生名单从头看到尾，也没看到她们。可惜啊，那对双胞胎可是正中我的好球区。如果她们考进来的话，这所学校里的人气排行榜就有新的乐子看了。」
 
-“有乐子看？嗯……『人气排行榜』又是个什么东西？”
+「有乐子看？嗯……『人气排行榜』又是个什么东西？」
 
 平心而论，在初中时并不掩饰对同学攻击性态度的我眼里，所谓的人气排行榜并不具有太多的意义。但出于在新环境中伪装自我的需要，还是问一下工藤好了。
 
-“是这所学校里的学生们建群组织的投票，我给你看看好了。”
+「是这所学校里的学生们建群组织的投票，我给你看看好了。」
 
 工藤掏出手机点了几下，随后向我递了过来。我接过手机，看向上面的内容——工藤的名字似乎排在男生中相当靠前的位置——随后便被一个似乎见过的名字吸引了视线。
 
-“这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？”
+「这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？」
 
-“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了女生榜的第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置。说起来，‘公主大人’今年可是被分到了我们班级啊。”
+「当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了女生榜的第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置。说起来，‘公主大人’今年可是被分到了我们班级啊。」
 
-“女王”和“公主”……这帮学生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
+「女王」和「公主」……这帮学生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
 
-“‘公主大人’……嗯，名字是……森山真咲（Moriyama Masaki）？你说她在这个班？”
+「‘公主大人’……嗯，名字是……森山真咲（Moriyama Masaki）？你说她在这个班？」
 
-“这不刚从你面前走过去嘛。”
+「这不刚从你面前走过去嘛。」
 
-我抬头向左看去，一名留着长发的女生一边和周围的同学们打招呼一边向教室里侧走去。上下打量了一下，森山的长相的确配得上“公主”这个称号。但姑且不论可爱与否，我并不觉得她漂亮到足以让人心动的地步——大概是我的审美标准出了什么差错吧。
+我抬头向左看去，一名留着长发的女生一边和周围的同学们打招呼一边向教室里侧走去。上下打量了一下，森山的长相的确配得上「公主」这个称号。但姑且不论可爱与否，我并不觉得她漂亮到足以让人心动的地步——大概是我的审美标准出了什么差错吧。
 
 手机上显示的时间快到了预备铃响的时刻。我将手机还给工藤，又问了一个问题：
 
-“能把我拉进这个群不？虽然我在这个群可能不会讲什么话，不过也可以帮忙统计一下票数。”
+「能把我拉进这个群不？虽然我在这个群可能不会讲什么话，不过也可以帮忙统计一下票数。」
 
-“也行啊。先加个好友？”
+「也行啊。先加个好友？」
 
-“OK，那我开下Linie。”
+「OK，那我开下Linie。」
 
 我掏出手机操作了几下，调出二维码给工藤看。他扫了一下，向我示意之后，我拿回手机，看到了Linie显示的通知。
 
@@ -190,11 +190,11 @@
 
 预备铃响了起来，工藤不慌不忙地回到了自己的座位上。一个理着平头，戴黑色窄框眼镜，看上去二十七八岁的男性教师走到了讲台上。
 
-“各位同学大家好，我是一年A班的班主任菅田宽治（Suda Kanji），负责的科目是数学。接下来的一年里，还请各位多多关照。那么，请从最右边的同学开始自我介绍吧。”
+「各位同学大家好，我是一年A班的班主任菅田宽治（Suda Kanji），负责的科目是数学。接下来的一年里，还请各位多多关照。那么，请从最右边的同学开始自我介绍吧。」
 
 闭上双眼，深吸一口气后，我从座位上站起，开始为期三年的伪装计划。
 
-“各位同学大家好。我的名字是雨宫政树……”
+「各位同学大家好。我的名字是雨宫政树……」
 
 &emsp;
 
