--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -6,7 +6,7 @@
 
 被条件反射驱动而打算说些什么的我，在发出声音前停下了嘴唇的动作。这里是图书馆，决不可发出不必要的声音，然而——
 
-“弹得不错嘛。刚才那首曲子我可以再听你弹一遍吗？”
+「弹得不错嘛。刚才那首曲子我可以再听你弹一遍吗？」
 
 站在门对面的女生显然不像我一般顾虑气氛。我向前方看去，周围并没有学生或教师出没的痕迹，那么她有这样的反应倒也算情有可原了。
 
@@ -14,95 +14,95 @@
 
 睁开眼睛的我上下打量着面前的女生。她穿着的白色长袖水手服是高等部的制服没错，但缎带却不是一年级的蓝色，而是二年级的绿色。这样看去，我应该称呼她为学姐才对。
 
-“好吧，我来为您带路。底下稍微有点冷，学姐最好还是注意一下。”
+「好吧，我来为您带路。底下稍微有点冷，学姐最好还是注意一下。」
 
-“我倒也没那么怕冷，还请多多指教了。”
+「我倒也没那么怕冷，还请多多指教了。」
 
 听到学姐毫不在意的回答的我，启动手机背面的闪光灯照亮楼梯。学姐在我身后将门关好，随后跟着我沿楼梯走向下方的房间。
 
 &emsp;
 
-“你管这叫‘有点’冷吗？你的脑子里对温度是怎么定义的啊？”
+「你管这叫『有点』冷吗？你的脑子里对温度是怎么定义的啊？」
 
-“的确只是‘有点’冷吧？我觉得还行啊，难道学姐你这么快就遭不住了吗？”
+「的确只是『有点』冷吧？我觉得还行啊，难道学姐你这么快就遭不住了吗？」
 
-“就以我站在这里的感觉，脑子稍微清楚一点的老师都不会在这里放钢琴好吧！？屋子里又冷又潮的，不做维护的话，用不了多久钢琴就会坏了吧！？”
+「就以我站在这里的感觉，脑子稍微清楚一点的老师都不会在这里放钢琴好吧！？屋子里又冷又潮的，不做维护的话，用不了多久钢琴就会坏了吧！？」
 
-“那种事又不归我管，我只是找个有钢琴的地方练习罢了。学姐要是觉得冷的话，穿我这件总行了吧？”
+「那种事又不归我管，我只是找个有钢琴的地方练习罢了。学姐要是觉得冷的话，穿我这件总行了吧？」
 
 我三下五除二地解开纽扣，脱下制服夹克向学姐丢了过去。
 
-“谢啦……嗯？你是高等部一年级的吗？”
+「谢啦……嗯？你是高等部一年级的吗？」
 
-“今年从外部考进来的。怎么了？”
+「今年从外部考进来的。怎么了？」
 
-“说实话我有点不太信啊，总觉得立领制服和你比较搭。”
+「说实话我有点不太信啊，总觉得立领制服和你比较搭。」
 
-“你是说我像中等部的吗！就算身高矮了点，但我好歹也是高等部的啊！不信你看！”
+「你是说我像中等部的吗！就算身高矮了点，但我好歹也是高等部的啊！不信你看！」
 
 我没好气地从口袋中掏出学生卡向学姐递了过去。她扫了一眼学生卡，若有所思地说道：
 
-“名字……嗯……雨宫政树……2开头的学生编号……确实是高等部没错。不过怎么看都不太像呢，感觉比我上初三的表弟矮了不少的样子。”
+「名字……嗯……雨宫政树……2开头的学生编号……确实是高等部没错。不过怎么看都不太像呢，感觉比我上初三的表弟矮了不少的样子。」
 
 我一瞬间不知道该怎么回应。直视学姐的眼睛都得稍微抬一点头的我，比小她两岁的表弟更矮也是理所当然的事。不仅如此，我的脑海中并没有庆祝生日的记忆留下，再加上那个女人曾在我上小学时动了手脚的缘故，我甚至会在某些时候发生年龄认知上的混乱。
 
-“……等等，我好像想起来了。雨宫政树……你是上午在入学式上致辞的新生代表对吧？”
+「……等等，我好像想起来了。雨宫政树……你是上午在入学式上致辞的新生代表对吧？」
 
-“对啊，怎么了？”
+「对啊，怎么了？」
 
-“雨宫同学既然是新生代表，要不要和我一起组个社团？”
+「雨宫同学既然是新生代表，要不要和我一起组个社团？」
 
-“不好意思，学姐，请问我有什么一定要和你组个社团活动的理由吗？”
+「不好意思，学姐，请问我有什么一定要和你组个社团活动的理由吗？」
 
-“如果你不想这个房间的秘密被其他同学知道的话——”
+「如果你不想这个房间的秘密被其他同学知道的话——」
 
-“好了好了，我同意。”
+「好了好了，我同意。」
 
 被学姐如此威胁之后，我只好举手投降。投来一个wink的学姐若有所思地继续说了下去：
 
-“名字嘛……我想想，反正我成绩也不错，就叫做题家（问题解答家）协会吧！”
+「名字嘛……我想想，反正我成绩也不错，就叫做题家（问题解答家）协会吧！」
 
-“做题家？”
+「做题家？」
 
-“雨宫同学你看啊，小说有小说家，音乐有音乐家，美术有美术家，那么做题自然也应该有做题家吧？”
+「雨宫同学你看啊，小说有小说家，音乐有音乐家，美术有美术家，那么做题自然也应该有做题家吧？」
 
 这套理论听起来倒没有什么可供指摘的地方，我干脆放弃思考，继续问问题好了。
 
-“既然如此，我们要解答什么问题？”
+「既然如此，我们要解答什么问题？」
 
-“所有的学习科目都可以解答。哦对了，恋爱问题也算作这类问题的一种哦？”
+「所有的学习科目都可以解答。哦对了，恋爱问题也算作这类问题的一种哦？」
 
 我在脑海中反刍着学姐的话。从上初中以来就过着远离他人生活的我，根本谈不上有什么恋爱经验，只不过从阅读过的作品中汲取了一点相关知识而已。在这样的我看来，恋爱的确可以算作是享受青春的高中生们应当学习的一门科目。
 
-“明白了。那学姐有想过在哪里进行社团活动吗？”
+「明白了。那学姐有想过在哪里进行社团活动吗？」
 
-“就这里怎么样？”
+「就这里怎么样？」
 
-“不行。”
+「不行。」
 
 我立刻否定了学姐的提议。
 
-“首先，我只想把这里当作自己练琴的地方，而且也不打算让其他人造访这里——当然学姐你是例外。再者，既然是做题，也无需拘泥于特定的场所。任何一个能做题的地方——空教室，食堂，小餐厅，图书馆，大厅里的休息处，乃至于旧宿舍一楼的休息区，都可以作为我们展开活动的据点。”
+「首先，我只想把这里当作自己练琴的地方，而且也不打算让其他人造访这里——当然学姐你是例外。再者，既然是做题，也无需拘泥于特定的场所。任何一个能做题的地方——空教室，食堂，小餐厅，图书馆，大厅里的休息处，乃至于旧宿舍一楼的休息区，都可以作为我们展开活动的据点。」
 
-“旧宿舍一楼？”
+「旧宿舍一楼？」
 
 听到学姐的问题，我才发现自己说漏了嘴。思考了一下，相比被学姐再刨根问题下去，还不如我自己和盘托出。
 
-“对。我住在旧宿舍——那里之前封闭翻新了一段时间，今年才重新开放，所以现在只有我一个人住在三楼。”
+「对。我住在旧宿舍——那里之前封闭翻新了一段时间，今年才重新开放，所以现在只有我一个人住在三楼。」
 
-“听起来是个不错的地方呢。那就这么向学生会报备？”
+「听起来是个不错的地方呢。那就这么向学生会报备？」
 
-“两个人的话够吗？”
+「两个人的话够吗？」
 
-“大不了我再拉一个人挂名。”
+「大不了我再拉一个人挂名。」
 
 既然学姐都这么说了，那我也没必要再去思考这些无聊的细节问题。
 
 ——而此时我才想起了另一件事：我连学姐的名字都不知道。
 
-“说起来，学姐你叫什么名字？”
+「说起来，学姐你叫什么名字？」
 
-“渡邊みゆき（Watanabe Miyuki），二年级。怎么，要加个Linie好友吗？”
+「渡邊みゆき（Watanabe Miyuki），二年级。怎么，要加个Linie好友吗？」
 
 她递过手机，上面是一个二维码。我打开Linie扫过后，出现了一个动画风格的头像，旁边则是学姐的ID：
 
@@ -112,27 +112,27 @@ snowsee。
 
 兴致颇深地看着我完成一系列操作的渡边学姐，又丢来一个我意想不到的问题：
 
-“刚才我听到的那一曲似乎中途停掉了，可以继续弹完吗？”
+「刚才我听到的那一曲似乎中途停掉了，可以继续弹完吗？」
 
-“渡边学姐说的应该是巴赫《赋格的艺术》的最后一曲吧？如果是那首的话，我弹出来的就是全部的内容了。”
+「渡边学姐说的应该是巴赫《赋格的艺术》的最后一曲吧？如果是那首的话，我弹出来的就是全部的内容了。」
 
-“哦？你的意思是说……”
+「哦？你的意思是说……」
 
 于是我开始向渡边学姐解释这一曲的创作经纬。Contrapunctus XIV的存世手稿末尾，有着以巴赫的儿子——卡尔·P·E·巴赫名义写下的一段内容，大意是<ruby><rb>「作曲者将以BACH动机开头的新主题插入此赋格后去世」</rb><rt>"Über dieser Fuge, wo der Nahme B A C H im Contrasubject angebracht worden, ist der Verfasser gestorben."</rt></ruby>。从那时起以来的数百年间，不少深入研究这一赋格的文章被撰写出来，也有为数不少的作曲家试图续写这部显然没有完成的作品。他们中的大多数都选择将出现于《赋格的艺术》前面曲目中的主题作为第四主题导入，这也是因为这一主题并未出现在本曲中的缘故。
 
 > 作曲者は、"BACH"の名に基く新たな主題をこのフーガに挿入したところで死に至った
 
-“那你有想过自己续写这首对位曲吗？”
+「那你有想过自己续写这首对位曲吗？」
 
-我摇摇头。虽然在学习钢琴的那几年，我也曾跟着老师学习过一些乐理知识，但如今也只不过是能流畅“读懂”钢琴谱的程度而已。要我基于巴洛克时期的对位法完成这首四重赋格，未免有些不太现实。
+我摇摇头。虽然在学习钢琴的那几年，我也曾跟着老师学习过一些乐理知识，但如今也只不过是能流畅「读懂」钢琴谱的程度而已。要我基于巴洛克时期的对位法完成这首四重赋格，未免有些不太现实。
 
-“那就把这当成我们这个做题家协会的第一个问题吧——这个问题就留给雨宫同学你自己。至于完成期限——虽然不必急于一时，但我希望自己毕业之前能够听到你续写的曲子。”
+「那就把这当成我们这个做题家协会的第一个问题吧——这个问题就留给雨宫同学你自己。至于完成期限——虽然不必急于一时，但我希望自己毕业之前能够听到你续写的曲子。」
 
 毕业——换而言之，渡边学姐给了我两年时间。如果是大学中主攻作曲方向的音乐系学生，两年的时间大概足够完成三到四个续写版本。而如果现在开始，从课余时间中挤出时间学习对位法并分析这首赋格的结构，我也有足够的信心在学姐毕业时交出一份她满意的答卷。
 
-“那就交给我好了。渡边学姐毕业的时候，请务必到这里听我续写完成的版本。”
+「那就交给我好了。渡边学姐毕业的时候，请务必到这里听我续写完成的版本。」
 
-“我看好你的表现哦。那我就先走啦，之后随时在Linie上联系。”
+「我看好你的表现哦。那我就先走啦，之后随时在Linie上联系。」
 
 露出一个微笑的渡边学姐转身离去，略带卷曲的中长发在空中轻轻晃动。
 
