--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -21,7 +21,7 @@
 
 我沿着门后的楼梯走上去，便进入了堪称迷宫的广阔空间——也就是位于这所学校地下一层的车库。
 
-根据宿管老师的说法，理论上可以从这里进入学校内除旧宿舍外的所有建筑物，而车库的数个出口则直接通向学校外侧——不过话又说回来，这所学校本来就不存在“校门”的概念，堪称来去自由的典范，连旧宿舍外都有一条通向后面柏油马路的小径。虽然原先位于此地的天道大学早已搬走，但大学的设计理念却仍在校园设计的理念上留存了下来。
+根据宿管老师的说法，理论上可以从这里进入学校内除旧宿舍外的所有建筑物，而车库的数个出口则直接通向学校外侧——不过话又说回来，这所学校本来就不存在「校门」的概念，堪称来去自由的典范，连旧宿舍外都有一条通向后面柏油马路的小径。虽然原先位于此地的天道大学早已搬走，但大学的设计理念却仍在校园设计的理念上留存了下来。
 
 我看向周围的指示标记，又抬头看了看上方的指示牌，确认方向并走了一小段路，便找到了通向教学楼的电梯。又过了一分钟后，我的双脚已然站在了大厅的地面上。
 
@@ -71,9 +71,9 @@
 
 空白的横线纸上，以娟秀的字体写着一行字：
 
-“给某天偶然见到的男孩子”。
+「给某天偶然见到的男孩子」。
 
-落款是“Dornröschen”。
+落款是「Dornröschen」。
 
 横线纸上还有一张结算小票，背面印着粉红色的唇印。
 
@@ -83,13 +83,13 @@
 
 不，不对。还是应当在某个部位比较一下的。非要说的话，还是渡边学姐这边——
 
-“——我这是在想什么呢。”
+「——我这是在想什么呢。」
 
 真拿自己没办法。虽然不知道这个学校里随处可见的男高中生们又是怎样，但很早就对这方面知识通过专业课书籍或是网络途径有所了解的我，却有着一个重大的缺陷——那就是我无法像某类文学中的主人公们一样，通过独自处理性欲获得精神上的愉悦，反而只能收获无尽的空虚感。
 
 更何况，在那样窒息的家庭环境之下，我也只能选择在那两个人不在家的时间段，尽可能不留痕迹地完成这一工作。在这一近乎与空气斗智斗勇的过程中，我大概已经练就了某些一般的男子高中生未必会掌握的技巧，但这并不是什么值得夸耀的东西。
 
-“——晚上洗澡的时候，在这个新环境试试好了。”
+「——晚上洗澡的时候，在这个新环境试试好了。」
 
 这不过是无法从中获取愉悦的人的例行公事。也许在他人眼里是某种变态行为，但我并不觉得这有什么好羞耻的。
 
@@ -101,77 +101,77 @@
 
 刚一走进旧宿舍楼，工藤就露出了羡慕的神色。
 
-“没想到雨宫你住在这么逍遥的地方啊，真是羡慕。”
+「没想到雨宫你住在这么逍遥的地方啊，真是羡慕。」
 
-“哪有什么值得羡慕的，工藤。虽说这里不缺配套设施，但我又懒得自己做饭，还不是得去食堂那边挤。”
+「哪有什么值得羡慕的，工藤。虽说这里不缺配套设施，但我又懒得自己做饭，还不是得去食堂那边挤。」
 
 我把工藤带到一楼的休息区，找了个半开放式的隔间坐下，随后向他问道：
 
-“所以，工藤你联系我是什么事？莫非是有追班上哪个女孩子的想法，跑来找我这个看上去脑子不错的人出主意？”
+「所以，工藤你联系我是什么事？莫非是有追班上哪个女孩子的想法，跑来找我这个看上去脑子不错的人出主意？」
 
-“你这哪是‘看上去脑子不错’啊？有你这么把人心里的想法直接说出来的吗？”
+「你这哪是『看上去脑子不错』啊？有你这么把人心里的想法直接说出来的吗？」
 
-“我也只是凭直觉猜的。对了，工藤要喝点什么吗？那边有饮水机，还有贩售饮料的自动贩卖机，需要的话我帮你取。”
+「我也只是凭直觉猜的。对了，工藤要喝点什么吗？那边有饮水机，还有贩售饮料的自动贩卖机，需要的话我帮你取。」
 
-“那就来瓶可乐吧。这是我的卡。”
+「那就来瓶可乐吧。这是我的卡。」
 
 我接过工藤的学生卡，走到自动贩卖机旁刷卡消费之后，从下面的出货口取出一瓶冷藏的可乐。
 
-“雨宫你不喝饮料吗？算我请客。”
+「雨宫你不喝饮料吗？算我请客。」
 
-“不必了，我喝水就好。”
+「不必了，我喝水就好。」
 
 虽然我的确有喝饮料的习惯，但很不巧的是这台贩卖机里既没有MTD也没有无味气泡水。而且今天我喝的碳酸饮料实在有点多，如果到晚上还被胀气困扰的话可就麻烦大了。
 
 将可乐递给工藤后，我问出了第三个问题：
 
-“工藤打算追的是班上的哪位？这次我就不猜了。”
+「工藤打算追的是班上的哪位？这次我就不猜了。」
 
-“……是森山啦。”
+「……是森山啦。」
 
 工藤的声音稍微带上了一丝迟疑，这完全不像清早他在班级里的作风。从窗外射入的霞光正一丝丝褪去，这让我看不清他的表情——这时我想到了两件事。其一是工藤说出这句话，说明他在中等部的三年里并没有多少机会和森山接触；其二——如此环境之下，我实在没有黑着灯和工藤说话的道理。
 
 我走到墙边，拨动开关，点亮头上的吸顶灯后，才坐回工藤对面继续说道：
 
-“从你给我留下的印象看，工藤你在中等部的时候身边应该不缺女生吧？如果这样的话，就算对面是《公主》，难道还需要我来出主意吗？”
+「从你给我留下的印象看，工藤你在中等部的时候身边应该不缺女生吧？如果这样的话，就算对面是《公主》，难道还需要我来出主意吗？」
 
-“雨宫你是呆子吧，《公主》和一般的女生能一样吗？”
+「雨宫你是呆子吧，《公主》和一般的女生能一样吗？」
 
-“不都一样是女生吗，怎么就不一样了？”
+「不都一样是女生吗，怎么就不一样了？」
 
-“你刚来这里所以不知道，排在人气榜女生组前面的那三位女生，到现在还保持着将来告白的男生全员击沉的纪录呢。就连讨论她们会和谁交往这件事，都已经成了蔓延整个学校的话题了。”
+「你刚来这里所以不知道，排在人气榜女生组前面的那三位女生，到现在还保持着将来告白的男生全员击沉的纪录呢。就连讨论她们会和谁交往这件事，都已经成了蔓延整个学校的话题了。」
 
 短短几句话之间，工藤已经喝掉了小半瓶可乐。我一边为那些被三位人气王击沉的男生们默哀，一边向面前这个可能成为下一个牺牲者的男生问道：
 
-“那工藤你就这么有自信能虏获《公主》的芳心？”
+「那工藤你就这么有自信能虏获《公主》的芳心？」
 
-“我本来也没有，但我觉得现在出手的难度会低一些。”
+「我本来也没有，但我觉得现在出手的难度会低一些。」
 
 我不禁瞥了工藤一眼——看来他早有计划，只是需要一个参谋而已。我试着在脑海中复盘自己阅读过的恋爱类故事的大致脉络，思考片刻后向工藤询问：
 
-“说到追女孩子的第一步，常见的策略是制造能够单独相处的机会。如果我的推测无误，工藤你是打算和森山同学一起担任我们这个一年A班的学级委员吧？”
+「说到追女孩子的第一步，常见的策略是制造能够单独相处的机会。如果我的推测无误，工藤你是打算和森山同学一起担任我们这个一年A班的学级委员吧？」
 
-“我说雨宫，你这脑子都好到可以给我老爹当助手了。”
+「我说雨宫，你这脑子都好到可以给我老爹当助手了。」
 
-“工藤的父亲从事的是什么工作？”
+「工藤的父亲从事的是什么工作？」
 
-“私家侦探、推理小说作家和翻译家。按我老爹的说法，脑子好的人既可以想到更多的推理思路，也可以根据既有的推理故事构造新的故事结构。先不说这个，我的确是想和森山一起担任班级里的学级委员没错，但我总觉得毛遂自荐的话，有什么地方不太对头。”
+「私家侦探、推理小说作家和翻译家。按我老爹的说法，脑子好的人既可以想到更多的推理思路，也可以根据既有的推理故事构造新的故事结构。先不说这个，我的确是想和森山一起担任班级里的学级委员没错，但我总觉得毛遂自荐的话，有什么地方不太对头。」
 
-“太过直接的攻势，反而会引发对面的反感？”
+「太过直接的攻势，反而会引发对面的反感？」
 
-“大致是这样没错。”
+「大致是这样没错。」
 
 不可正攻，那么就该迂回了。我思索片刻，想到了一个办法。
 
-“既然如此，接下来工藤就按我说的办法行事。我今晚会在班级群里保持沉默，而工藤你需要做的，是在群里制造我有可能自荐担任学级委员的气氛。”
+「既然如此，接下来工藤就按我说的办法行事。我今晚会在班级群里保持沉默，而工藤你需要做的，是在群里制造我有可能自荐担任学级委员的气氛。」
 
-“雨宫你来当学级委员？”
+「雨宫你来当学级委员？」
 
-“是‘制造气氛’——总之，这份气氛需要达到确保在我发言之前没有人自我推荐的地步。必要的话，你也可以在回宿舍之后和同学提起这个事。”
+「是『制造气氛』——总之，这份气氛需要达到确保在我发言之前没有人自我推荐的地步。必要的话，你也可以在回宿舍之后和同学提起这个事。」
 
-“明白了。那之后要怎么做？”
+「明白了。那之后要怎么做？」
 
-“之后的话就……”
+「之后的话就……」
 
 随后，我对工藤讲出了自己准备实行的计划。
 
