--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -2,7 +2,7 @@
 
 &emsp;
 
-“那么，昨天我也说过了，今天要决定各个委员的人选。先从学级委员开始。”
+「那么，昨天我也说过了，今天要决定各个委员的人选。先从学级委员开始。」
 
 第三节课。讲完了这一学年的大致要点后，菅田老师对着整个教室说道。
 
@@ -18,7 +18,7 @@
 
 四四、四五、四六。
 
-“嗯，还没有哪位同学愿意担任学级委员的吗？我再等半分钟，如果还没有人自告奋勇的话，我就直接指定了啊。”
+「嗯，还没有哪位同学愿意担任学级委员的吗？我再等半分钟，如果还没有人自告奋勇的话，我就直接指定了啊。」
 
 五八、五九、六十。
 
@@ -28,17 +28,17 @@
 
 我挤出一个自嘲般的笑容，举起右手示意。
 
-“哦，是雨宫啊。”
+「哦，是雨宫啊。」
 
-“是的。关于学级委员，我有话要讲。”
+「是的。关于学级委员，我有话要讲。」
 
 教室内的窃窃私语逐渐停下。我按计划说了下去：
 
-“由于身体原因，我未能参加昨天下午的联谊会，这也导致初来乍到的我对各位同学尚缺乏足够的了解，在此向各位同学致歉。”
+「由于身体原因，我未能参加昨天下午的联谊会，这也导致初来乍到的我对各位同学尚缺乏足够的了解，在此向各位同学致歉。」
 
-我向各位鞠了一躬，教室中随即响起“没关系啦”“下次有机会再说嘛”的声音。我停顿片刻，继续说道：
+我向各位鞠了一躬，教室中随即响起「没关系啦」「下次有机会再说嘛」的声音。我停顿片刻，继续说道：
 
-“因此，我只能凭借昨天的第一印象决定自己推荐的人选——如果她本人没有意见，我建议由森山同学担任学级委员。”
+「因此，我只能凭借昨天的第一印象决定自己推荐的人选——如果她本人没有意见，我建议由森山同学担任学级委员。」
 
 教室中响起稀稀拉拉的拍手声音。我将视线转向森山同学，却发现她面露不渝之色。
 
@@ -46,47 +46,47 @@
 
 我的脑海中闪过这个念头，但事到如今也再无用处——因为我根本就没有基于这一前提制定备用的计划。我只能装出一副从容的样子，继续临场发挥：
 
-“啊，非常抱歉，森山同学。我只是因为听说你在这所学校人气很高，才提出了这一建议。如果你本人没有这一意愿，也可以在此拒绝我的推荐。”
+「啊，非常抱歉，森山同学。我只是因为听说你在这所学校人气很高，才提出了这一建议。如果你本人没有这一意愿，也可以在此拒绝我的推荐。」
 
 森山同学的脸色似乎又难看了一点，不过她身旁的同学们似乎对此毫无察觉，起哄一般的话语在班上此起彼伏。
 
 这么下去就麻烦了。我将右手撑在桌上，用小指敲了三下桌面——这是我昨天和工藤拟定作战计划时约定好的暗号。
 
-“雨宫，我觉得你这样不太好吧。”
+「雨宫，我觉得你这样不太好吧。」
 
 我熟悉的那个声音从后面传来。Nice。
 
-“嗯？怎么说？”
+「嗯？怎么说？」
 
 我将身体转向后面，看着一脸认真表情的工藤。
 
-“雨宫你不觉得这种把人逼到墙角的行为，只会让当事人觉得不爽吗？而且你话里的意思，总让人觉得是你想当男生这边的学级委员。”
+「雨宫你不觉得这种把人逼到墙角的行为，只会让当事人觉得不爽吗？而且你话里的意思，总让人觉得是你想当男生这边的学级委员。」
 
 前半句并不在昨晚拟定的剧本中，但工藤似乎和我一样察觉了森山同学的异常状况。我一边对他的解围行为在内心表达感激，一边抓住他的后一句话反驳了回去：
 
-“**我刚才应该没有提到‘我会担任学级委员’**。”
+「**我刚才应该没有提到‘我会担任学级委员’**。」
 
 我又转过头看了一下，森山同学脸上的阴霾似乎消散了一点。这大概可以说明一个问题——森山同学并不是**不愿意担任学级委员**，只是**不愿意和我一起担任学级委员**罢了。
 
 既然如此，就按原计划行事。我重新面向菅田老师，继续说了下去：
 
-“非常抱歉，我刚才的话可能让老师和同学们产生了不必要的误解，在此再次表示由衷的歉意。既然工藤同学提出了质疑，说明我可能并不适合担任学级委员。在此，我推荐由工藤同学担任学级委员，同时**不会担任任何委员职位**，以避免可能存在的不安情绪。”
+「非常抱歉，我刚才的话可能让老师和同学们产生了不必要的误解，在此再次表示由衷的歉意。既然工藤同学提出了质疑，说明我可能并不适合担任学级委员。在此，我推荐由工藤同学担任学级委员，同时**不会担任任何委员职位**，以避免可能存在的不安情绪。」
 
 这段话并不是彻头彻尾的胡言乱语。我自认是个精力不足的人，从事自己不能胜任的工作，不仅无法回应老师和同学们的期待，更会对自身的学业造成不良影响——**那个女人曾经让我用身体记住了成绩下降会造成怎样的后果**。
 
 我又鞠了一躬后，在座位上坐下。菅田老师迟疑了一会，才面向全班说道：
 
-“同意由工藤和森山担任学级委员的同学，请举手。”
+「同意由工藤和森山担任学级委员的同学，请举手。」
 
 我第一个举起了手。其他同学看到我的样子，也纷纷跟着举手示意。
 
-“那接下来的工作就交给你们了，工藤，森山。”
+「那接下来的工作就交给你们了，工藤，森山。」
 
 工藤和森山同学从座位上站起，走到了讲台上。
 
-“请多指教，森山同学。”
+「请多指教，森山同学。」
 
-“我这边才是，请多指教，工藤同学。”
+「我这边才是，请多指教，工藤同学。」
 
 森山同学的笑容应该是真心的——此时我的脑海中浮现出群组《UTAS Studenten》中的上一期学生人气排行榜。没记错的话，工藤在男生榜里排在第三。
 
@@ -110,7 +110,7 @@
 
 五九六、五九七、五九八、五九九、六百。
 
-“那么所有的委员职位都决定好了。接下来的一年，还请同学们多多努力。”
+「那么所有的委员职位都决定好了。接下来的一年，还请同学们多多努力。」
 
 菅田老师进行了总结发言。我睁开双眼，下课铃声恰好于此刻响起。
 
