--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -32,19 +32,19 @@
 
 随后我找了一个角落里无人光顾的餐桌，将书包放在一边的椅子上，自顾自地吃了起来。还没等我吃完，渡边学姐已经走了过来。她把制服外套放在了我刚才放书包的椅子上，随后绕到另一边，坐在我的对面。
 
-“雨宫同学这是在享用下午茶吗？”
+「雨宫同学这是在享用下午茶吗？」
 
-“没啊，我平常就吃这么多。晚上可能会再吃点零食。”
+「没啊，我平常就吃这么多。晚上可能会再吃点零食。」
 
 听到我不带感情的回复，渡边学姐皱起了眉头。
 
-“难怪你看上去这么瘦。”
+「难怪你看上去这么瘦。」
 
-“我回忆一下……上次检查的体重应该是……43kg吧。”
+「我回忆一下……上次检查的体重应该是……43kg吧。」
 
-“居然比我轻吗？总不会是饮食习惯造成的吧？”
+「居然比我轻吗？总不会是饮食习惯造成的吧？」
 
-“不知道。说不准我是那种怎么吃都不会胖的体质。”
+「不知道。说不准我是那种怎么吃都不会胖的体质。」
 
 这方面我倒还算有点自信。渡边学姐叹了口气，从书包里拿出了两本书。她将其中一本放在桌子上，又打开另一本书开始阅读。
 
@@ -54,93 +54,93 @@
 
 "La Fille du Livre" et l'esprit affamé.
 
-我飞速解锁手机，在wiki上检索“Fille du Livre”这个关键词，随后开始阅读搜索结果指向的页面。
+我飞速解锁手机，在wiki上检索「Fille du Livre」这个关键词，随后开始阅读搜索结果指向的页面。
 
 大致把握了这一轻小说的要点后，我试着向渡边学姐搭话：
 
-“渡边学姐很喜欢这部作品吗？”
+「渡边学姐很喜欢这部作品吗？」
 
 听到我的声音，学姐放下书回答：
 
-“我是看了这部作品的第一卷才觉得它很出色的。里面刻画的最好的，就是故事的核心人物——也就是那位学妹。顺带一提，这部作品的每一卷都有一部对应的原型作品，第一卷对应的是——”
+「我是看了这部作品的第一卷才觉得它很出色的。里面刻画的最好的，就是故事的核心人物——也就是那位学妹。顺带一提，这部作品的每一卷都有一部对应的原型作品，第一卷对应的是——」
 
 学姐突然停了下来，像是在等待我的答案一般。
 
 难道我刚才的动作被学姐看穿了吗？我好不容易才用自己刚记住的知识覆盖掉这个疑问，随后小心翼翼地回答：
 
-“是津岛先生的《La Déchéance d'un Homme》对吧？”
+「是津岛先生的《La Déchéance d'un Homme》对吧？」
 
 学姐露出了赞许的表情回答：
 
-“没错。但是当我阅读这部作品的第二卷时，那种‘觉得故事很出色，角色刻画的也很到位’的感觉消失了——尤其是当将这一卷和它的原型《Les Hauts de Hurlevent》放在一起对比的时候。”
+「没错。但是当我阅读这部作品的第二卷时，那种‘觉得故事很出色，角色刻画的也很到位’的感觉消失了——尤其是当将这一卷和它的原型《Les Hauts de Hurlevent》放在一起对比的时候。」
 
-“是因为故事与其中的角色，相比原型作品发生了‘错位’吗？”
+「是因为故事与其中的角色，相比原型作品发生了‘错位’吗？」
 
 这一次，学姐没有回答我的问题，而是将手中的书放下，又拿起放在一边的那本书——应该就是《Les Hauts de Hurlevent》了——继续说道：
 
-“《Les Hauts de Hurlevent》是其作者艾米莉女士出版的唯一一部作品。当时她和她的姐妹们——夏洛蒂和安妮决定各自创作一本小说。她们写作的动机并非‘讲述故事’，而是完完全全的经济因素。”
+「《Les Hauts de Hurlevent》是其作者艾米莉女士出版的唯一一部作品。当时她和她的姐妹们——夏洛蒂和安妮决定各自创作一本小说。她们写作的动机并非‘讲述故事’，而是完完全全的经济因素。」
 
-“经济因素？”
+「经济因素？」
 
-“她们的兄弟博朗威尔——也是兄弟姐妹中的独生子，是个非常不成器的人。根据那个时候的遗产继承原则，她们一家的财产将会全部由这个兄弟继承。如果雨宫同学你读过简女士的作品，应该能找到类似的例子。”
+「她们的兄弟博朗威尔——也是兄弟姐妹中的独生子，是个非常不成器的人。根据那个时候的遗产继承原则，她们一家的财产将会全部由这个兄弟继承。如果雨宫同学你读过简女士的作品，应该能找到类似的例子。」
 
-“比如《Orgueil et Préjugés》？”
+「比如《Orgueil et Préjugés》？」
 
 平心而论，我对这位女作家的了解，也仅限于这本恋爱小说而已。
 
-“对。回到正题，为了避免陷入一无分文的窘迫境地，三姐妹决定各写一本小说，靠版税收入维持以后的生活——最先获得成功的，是长姐夏洛蒂的作品。”
+「对。回到正题，为了避免陷入一无分文的窘迫境地，三姐妹决定各写一本小说，靠版税收入维持以后的生活——最先获得成功的，是长姐夏洛蒂的作品。」
 
 不用渡边学姐多提，我也知道说的是哪一部——那个女人的书架上就收藏有这部小说的英文版精装本，旁边还放了1944版的DVD盒子。
 
-“讽刺的是，在夏洛蒂的小说大获成功后，博朗威尔反而陷入了精神上进一步崩溃的境地——因为他无法接受自己的姐妹们有着比自己更出色的才能。甚至后世的研究者中，也有一些人提出不着边际的论调——认为三姐妹的小说实际上是博朗威尔写的。”
+「讽刺的是，在夏洛蒂的小说大获成功后，博朗威尔反而陷入了精神上进一步崩溃的境地——因为他无法接受自己的姐妹们有着比自己更出色的才能。甚至后世的研究者中，也有一些人提出不着边际的论调——认为三姐妹的小说实际上是博朗威尔写的。」
 
 渡边学姐停了一下，继续讲了下去：
 
-“前几年BBC出过一部以三姐妹所在的家族为主题的纪录片。我最不能接受的，就是这一纪录片的时间线只到博朗威尔去世为止，全然不顾夏洛蒂在这之后又活了多年的事实——简直就像是说三姐妹的人生都只是围绕博朗威尔而存在一般。都21世纪了，这帮人的思想却像是还停留在19世纪。”
+「前几年BBC出过一部以三姐妹所在的家族为主题的纪录片。我最不能接受的，就是这一纪录片的时间线只到博朗威尔去世为止，全然不顾夏洛蒂在这之后又活了多年的事实——简直就像是说三姐妹的人生都只是围绕博朗威尔而存在一般。都21世纪了，这帮人的思想却像是还停留在19世纪。」
 
-“这种对女性创作者的偏见还真够无耻的。”
+「这种对女性创作者的偏见还真够无耻的。」
 
-“没错吧？每当人们发现一本畅销书的作者是女性的时候，就会对这位女作家挑三拣四，冷嘲热讽。而同样的情况，完全不会落到男性创作者身上。”
+「没错吧？每当人们发现一本畅销书的作者是女性的时候，就会对这位女作家挑三拣四，冷嘲热讽。而同样的情况，完全不会落到男性创作者身上。」
 
-“渡边学姐的话，倒是让我想到津岛先生的知名作品《Le Soleil Couchant》。很多评论家认为这部作品对女主人公的描写精致到完全不像一个男性创作者的手笔，不过其实——”
+「渡边学姐的话，倒是让我想到津岛先生的知名作品《Le Soleil Couchant》。很多评论家认为这部作品对女主人公的描写精致到完全不像一个男性创作者的手笔，不过其实——」
 
-“你想说的内容，我在《Au clair》这本回忆录里面看过。”
+「你想说的内容，我在《Au clair》这本回忆录里面看过。」
 
 学姐似乎看穿了我听到她的话而露出的惊诧神情。
 
-“我还看过以津岛先生为主角的一部电影，里面完整描述了津岛先生请求那位仰慕者为自己写一本日记作为《Le Soleil Couchant》的创作素材，作为交换，让她怀上自己的孩子的过程。顺带一提，津岛先生当时正在交往的那位情妇，听说私生女出生一事时的反应嘛……”
+「我还看过以津岛先生为主角的一部电影，里面完整描述了津岛先生请求那位仰慕者为自己写一本日记作为《Le Soleil Couchant》的创作素材，作为交换，让她怀上自己的孩子的过程。顺带一提，津岛先生当时正在交往的那位情妇，听说私生女出生一事时的反应嘛……」
 
-“如果我的记忆没错，津岛先生当时是已婚吧？那这位情妇的心态岂不是崩了？正妻和崇拜者都有孩子，唯独自己没有？”
+「如果我的记忆没错，津岛先生当时是已婚吧？那这位情妇的心态岂不是崩了？正妻和崇拜者都有孩子，唯独自己没有？」
 
-“电影里的确是这么表现的。”
+「电影里的确是这么表现的。」
 
 我猜的倒还够准——不过这终究得益于我在长期被那个女人拖去参加她与闺蜜们聚餐的经验中得来的知识。
 
-“渡边学姐，容我提出一个大胆的猜测。津岛先生的情妇最终和他一起投水自尽，是否也和这种心态崩塌有关？”
+「渡边学姐，容我提出一个大胆的猜测。津岛先生的情妇最终和他一起投水自尽，是否也和这种心态崩塌有关？」
 
-“这个我就不太清楚了。嘛，我们是不是把话题扯的有点远了？刚才讲到哪来着？”
+「这个我就不太清楚了。嘛，我们是不是把话题扯的有点远了？刚才讲到哪来着？」
 
-“学姐手上的这两本书，《Fille du Livre》的第二卷和艾米莉的《Les Hauts de Hurlevent》。”
+「学姐手上的这两本书，《Fille du Livre》的第二卷和艾米莉的《Les Hauts de Hurlevent》。」
 
-“哦对，我差点忘了。我在读了一遍《Fille du Livre》的第二卷之后，又重新读了一遍作为原型作品的《Les Hauts de Hurlevent》。然而在读的时候，我发现这部作品存在一些难以忽视的缺陷。”
+「哦对，我差点忘了。我在读了一遍《Fille du Livre》的第二卷之后，又重新读了一遍作为原型作品的《Les Hauts de Hurlevent》。然而在读的时候，我发现这部作品存在一些难以忽视的缺陷。」
 
-“缺陷？”
+「缺陷？」
 
-“最大的问题在于，虽然我们可以理解主人公对夺走了他深爱的女主人公的那个男性，以及女主人公的哥哥这两个人——乃至于他们背后的两大家族——之间的仇恨，但是复仇的过程显得过于苍白了。尤其是主人公是怎样成为一个有钱人再回来复仇的过程，更是完全没有写——简直就像是<ruby><rb>舞台装置</rb><rt>Deux ex Machina</rt></ruby>一样的设定。”
+「最大的问题在于，虽然我们可以理解主人公对夺走了他深爱的女主人公的那个男性，以及女主人公的哥哥这两个人——乃至于他们背后的两大家族——之间的仇恨，但是复仇的过程显得过于苍白了。尤其是主人公是怎样成为一个有钱人再回来复仇的过程，更是完全没有写——简直就像是<ruby><rb>舞台装置</rb><rt>Deux ex Machina</rt></ruby>一样的设定。」
 
-“相比之下，《Le Comte de Monte-Cristo》虽然被称为爽文鼻祖，但至少相对合理地描述了主人公获得财富的过程。”
+「相比之下，《Le Comte de Monte-Cristo》虽然被称为爽文鼻祖，但至少相对合理地描述了主人公获得财富的过程。」
 
 学姐听到我的补充，点了点头继续说道：
 
-“而且我在阅读《Les Hauts de Hurlevent》的时候，始终有种感觉——男女主人公之间的‘爱’，似乎并不是那么简单的东西。”
+「而且我在阅读《Les Hauts de Hurlevent》的时候，始终有种感觉——男女主人公之间的‘爱’，似乎并不是那么简单的东西。」
 
-“也许让我来阅读这两部作品，会得到不太一样的结论吧。渡边学姐，我可以读一读你手上的这本吗？”
+「也许让我来阅读这两部作品，会得到不太一样的结论吧。渡边学姐，我可以读一读你手上的这本吗？」
 
-“如果是《Fille du Livre》的话，我还是建议你从第一卷开始阅读。可惜的是，我手头目前只有从图书馆里借出的第二卷。雨宫同学你可以去那里看看，我记得这部作品那边应该收录了不止一套——大概是毕业生们捐给图书馆的吧。”
+「如果是《Fille du Livre》的话，我还是建议你从第一卷开始阅读。可惜的是，我手头目前只有从图书馆里借出的第二卷。雨宫同学你可以去那里看看，我记得这部作品那边应该收录了不止一套——大概是毕业生们捐给图书馆的吧。」
 
-“好的。非常感谢学姐的指点。那我就先去图书馆了。”
+「好的。非常感谢学姐的指点。那我就先去图书馆了。」
 
-“我期待你的读后感哦。”
+「我期待你的读后感哦。」
 
 我向渡边学姐微笑了一下，随后拿起身旁的书包，将制服披在身上。
 
