--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -44,21 +44,21 @@
 
 《La Porte Étroite》。
 
-“这下完了。”
+「这下完了。」
 
 这算怎么一回事啊……连我都能看出作者对欧美文学的理解能力存在缺陷，却偏偏在最重要的两卷选择了纪德的作品作为原型！脑子出问题了吗！
 
 我不由得打开浏览器，搜索《La Fille du Livre》的相关讨论——尤其是匿名社区上的发言，能够更加真实地反映出读者们的看法。
 
-“女主人公完全就是迫使主人公的青梅竹马自杀的凶手”
+「女主人公完全就是迫使主人公的青梅竹马自杀的凶手」
 
-“在我看来这部作品看完第五卷就差不多得了”
+「在我看来这部作品看完第五卷就差不多得了」
 
-“谁要看第七卷第八卷里面涉及上一代的狗血内容啊”
+「谁要看第七卷第八卷里面涉及上一代的狗血内容啊」
 
-“主人公的那个同学才是最般配的”
+「主人公的那个同学才是最般配的」
 
-“真以为作者不知道吗？不然干嘛在另一部作品中找补？”
+「真以为作者不知道吗？不然干嘛在另一部作品中找补？」
 
 随便动一下轨迹点，就能发现痛斥作品本身甚至是作者本人的回复。我不由得将右臂支在桌面上，一边抓着头发一边思考。
 
@@ -98,7 +98,7 @@
 
 脑袋里还留着轻微的疼痛感，大概是昨晚熬夜过度了吧——虽然我很想再睡一会，但肚子却有点饿了。无奈之下，我只好走向洗面台，用冷水冲了下脸。
 
-“食堂十有八九已经关了吧……去小餐厅看看还剩下什么好了。”
+「食堂十有八九已经关了吧……去小餐厅看看还剩下什么好了。」
 
 我打了个哈欠，随便套上制服衬衫，将门锁好后，带着学生卡离开了旧宿舍楼。
 
@@ -132,13 +132,13 @@
 
 乍看之下，的确是令人感动的话语。
 
-然而，我却无法容忍自己不去思考这些话语“背后”的内容——当作者将男女主人公设置为表里一体的存在时，把无辜的人们卷进来，这本身就是一场悲剧。
+然而，我却无法容忍自己不去思考这些话语「背后」的内容——当作者将男女主人公设置为表里一体的存在时，把无辜的人们卷进来，这本身就是一场悲剧。
 
-“真不知道林顿一家子人是倒了多大的霉，才会被呼啸山庄的人们招惹上。”
+「真不知道林顿一家子人是倒了多大的霉，才会被呼啸山庄的人们招惹上。」
 
 我摇摇头，又翻阅笔记，找到记有《La Fille du Livre》第二卷笔记的内容。
 
-如果说艾米莉在《Les Hauts de Hurlevent》中描述的是主人公之间基于本能而产生的爱情（算是对这部小说的评论中经常提到的一个概念）的话，《La Fille du Livre》的第二卷中的主角之间又被作者加上了“血缘”这一要素。
+如果说艾米莉在《Les Hauts de Hurlevent》中描述的是主人公之间基于本能而产生的爱情（算是对这部小说的评论中经常提到的一个概念）的话，《La Fille du Livre》的第二卷中的主角之间又被作者加上了「血缘」这一要素。
 
 从幼年期起便长期分离的异性，由于血缘关系的存在而在性的意义上互相吸引，也算是文学作品乃至现实中经常被拿来讨论的内容了。我在网络上曾经看到过这方面的一些研究资料，也有一些心理学家认为人类的本能中就存在对近亲产生性吸引的要素，因此才发展出了一套机制加以对抗——这一机制也被这些心理学家们认为是从小一起生活的异性很难产生恋爱感情的原因。
 
@@ -152,9 +152,9 @@
 
 **故事的悲剧程度反而因为这一嫁接行为而被冲淡了**。
 
-掺杂了“血缘关系”的“爱情”，还能算作是“爱情”吗？
+掺杂了「血缘关系」的「爱情」，还能算作是「爱情」吗？
 
-或者说，将“血缘关系”这个设定嫁接上去，真的是“必要”的吗？
+或者说，将「血缘关系」这个设定嫁接上去，真的是「必要」的吗？
 
 从这个意义上看，将《La Fille du Livre》的第二卷视为失败作丝毫不算过分。
 
