--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -8,9 +8,9 @@
 
 身为单身妈妈的琴美阿姨，开了一家规模不大的建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚要求。而她的前夫和那个从事风俗业的女性，从此便离开了这个城市再无消息。
 
-琴美阿姨的状况绝非个案。不如说，我曾在历次聚餐中见过的这些女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的“人”来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
+琴美阿姨的状况绝非个案。不如说，我曾在历次聚餐中见过的这些女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的「人」来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
 
-那个女人在和她的闺蜜们聚餐的时候，很少提及自己和那个男人的关系；与此相对的，她的闺蜜们也从来都是用“政树君”来称呼我，而很少提到我从那个男人继承而来的姓氏。当然，这并不妨碍那个女人的闺蜜们在某个她不在的场合就此说长道短——正如此刻她们讨论着不在场的那些人一样。
+那个女人在和她的闺蜜们聚餐的时候，很少提及自己和那个男人的关系；与此相对的，她的闺蜜们也从来都是用「政树君」来称呼我，而很少提到我从那个男人继承而来的姓氏。当然，这并不妨碍那个女人的闺蜜们在某个她不在的场合就此说长道短——正如此刻她们讨论着不在场的那些人一样。
 
 反正对我而言，这个姓氏也没什么好留恋的。在规定夫妇必须同姓的制度之下，结婚后把自己的姓氏改掉也不算什么大不了的事——前提是，我能活到提交和某个女性的结婚申请书的那一天。
 
@@ -18,29 +18,29 @@
 
 女人们叽叽喳喳的声音传到了我的耳边。
 
-“说起来Asakura学长最近似乎很忙呢。”
+「说起来Asakura学长最近似乎很忙呢。」
 
-“没记错的话，他夫人病的很重，似乎也就在这几天了。”
+「没记错的话，他夫人病的很重，似乎也就在这几天了。」
 
-“说的是Haruka-san（小姐）吗？我记得上学的时候就听说她身体不太好来着。”
+「说的是Haruka-san（小姐）吗？我记得上学的时候就听说她身体不太好来着。」
 
-“<ruby><rb>隆子</rb><rt>Takako</rt></ruby>你没听说什么消息吗？”
+「<ruby><rb>隆子</rb><rt>Takako</rt></ruby>你没听说什么消息吗？」
 
-“没有，我们都多少年没联系过了。”
+「没有，我们都多少年没联系过了。」
 
 耳边传来那个女人若无其事的声音。然而我别说继续听女人们讲话了，甚至无法将面前的菜吃下去。之前就觉得发痒的喉咙像是烧着了一般，我想咳几下，可又怕打扰到那个女人和她的闺蜜们。
 
-“政树君，你怎么了？”
+「政树君，你怎么了？」
 
 琴美阿姨似乎察觉到我有点不太对劲，向我搭话询问。这时那个女人才将视线转向了我。
 
-“政树，要么你先回去吧。”
+「政树，要么你先回去吧。」
 
-“好的。”
+「好的。」
 
 我勉强站起身体，又向在座的各位阿姨鞠躬致歉：
 
-“抱歉给各位添了麻烦。在此失陪了。”
+「抱歉给各位添了麻烦。在此失陪了。」
 
 说罢我便转过身，以尽可能平稳的脚步向出口走去。
 
@@ -60,7 +60,7 @@
 
 五分钟后，我拿出了体温计——水银柱停在了39.8度的位置上。
 
-“阿司匹林——在这里。”
+「阿司匹林——在这里。」
 
 我驱动脑海中仅剩的理智，从盒子里找到装有阿司匹林片的小瓶倒出一颗药片，又走进厨房翻出一个久未有人使用的玻璃杯，随便冲了一下后接了点水将药片吃了下去。
 
@@ -110,7 +110,7 @@
 
 【Takako Kamachi: 明天还没好的话我再带你去诊所。】
 
-那个女人的回答并没有超出我的预期。我回复了一句“明白了”之后，切换到和工藤的对话窗口。
+那个女人的回答并没有超出我的预期。我回复了一句「明白了」之后，切换到和工藤的对话窗口。
 
 【MSK: 麻烦明天帮我请个假】
 
