--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -66,7 +66,7 @@
 
 &emsp;
 
-“给，这是我按雨宫同学你发来的消息买的。”
+「给，这是我按雨宫同学你发来的消息买的。」
 
 不到一小时后，来到诊所的渡边学姐走到我的床边，递给我一个塑料袋后，拉过旁边的一个椅子坐下。
 
@@ -76,19 +76,19 @@
 
 我没有立刻回答渡边学姐的问题——这是因为我在某次点击Kwetter的热搜时，发现有人写了”PO〇RI的味道和稀释过的**某种液体**很像“的文字。虽然在我看来两者的味道并没有那么接近，但要我在学姐面前讲这句话，未免有性骚扰的嫌疑。
 
-“……还好吧。至少我现在还有力气喝下去。”
+「……还好吧。至少我现在还有力气喝下去。」
 
 最后我只能做出如此模棱两可的回应。渡边学姐看到我的样子没有大碍，就没有再多说什么。
 
 随后，学姐从放在一旁的书包中拿出了一个笔记本，翻到空白页后，又用自动铅笔在上面勾勒着。
 
-“学姐喜欢画画吗？”
+「学姐喜欢画画吗？」
 
-“嗯。小时候学过一段时间。”
+「嗯。小时候学过一段时间。」
 
-“我在这方面可是完全不行。初中时的美术课老师，对我画的素描画评价很差。”
+「我在这方面可是完全不行。初中时的美术课老师，对我画的素描画评价很差。」
 
-“人总是有擅长和不擅长的事嘛，雨宫同学。我在音乐方面可是一塌糊涂，连五线谱都搞不太清楚，唱歌更是五音不全。”
+「人总是有擅长和不擅长的事嘛，雨宫同学。我在音乐方面可是一塌糊涂，连五线谱都搞不太清楚，唱歌更是五音不全。」
 
 ”这样吗？“
 
@@ -118,35 +118,35 @@
 
 这时我的余光捕捉到，似乎完成了手中那张素描画的渡边学姐，正打算把笔记本合上。
 
-“等一下。”
+「等一下。」
 
 听到我的声音，学姐停下了动作。
 
-“我能看一下那张画吗？”
+「我能看一下那张画吗？」
 
 学姐的脸色似乎有点不太对。她迟疑了一下回答：
 
-“不行。”
+「不行。」
 
-“因为画的是我吗？难不成，是裸体？”
+「因为画的是我吗？难不成，是裸体？」
 
 学姐没有回答——看样子我猜中了。这样一来，我似乎也可以理解她不想让我看到那幅画的原因。
 
 然而，我无论如何都想看到那幅素描画。于是我尝试改变了自己的声线，以**女孩子一般的声音和口气**问道：
 
-“真的不可以吗？”
+「真的不可以吗？」
 
 学姐的脸颊一下子红了。
 
-“你，你这个样子……犯规了吧……”
+「你，你这个样子……犯规了吧……」
 
-“给人家看看好不好啊？”
+「给人家看看好不好啊？」
 
-“怪不好意思的……”
+「怪不好意思的……」
 
-“拜，拜托你了嘛……”
+「拜，拜托你了嘛……」
 
-“好啦好啦。真拿你没办法。”
+「好啦好啦。真拿你没办法。」
 
 看到我一脸委屈的样子，学姐只好将笔记本递了过来。我用右手拿着笔记本，端详着学姐的画作。
 
@@ -156,81 +156,81 @@
 
 更重要的是，**没有喉结，胸前却有着足以分辨的膨胀**。
 
-“这是……把我给……性转了吗……”
+「这是……把我给……性转了吗……」
 
-“对啊。雨宫同学你看完了没？”
+「对啊。雨宫同学你看完了没？」
 
 看到宛如陷入自暴自弃状态的学姐，我只好点了点头。
 
-“嗯，看完了。”
+「嗯，看完了。」
 
-“不会笑我？”
+「不会笑我？」
 
-“怎么会呢。”
+「怎么会呢。」
 
-“不许骗我。”
+「不许骗我。」
 
-“当然不会骗你。”
+「当然不会骗你。」
 
 这是我的真心话，因为我并非从来没有幻想过自己变成一个女孩子的情况。
 
 我将笔记本递了回去，学姐幽幽地说道：
 
-“感觉自己像是被雨宫同学抓住了把柄一样。”
+「感觉自己像是被雨宫同学抓住了把柄一样。」
 
-“那我也讲一个自己的黑历史，这样就算扯平吧。”
+「那我也讲一个自己的黑历史，这样就算扯平吧。」
 
-“真的？”
+「真的？」
 
-“先说好，学姐不许因为这个事讨厌我。”
+「先说好，学姐不许因为这个事讨厌我。」
 
-“好，我答应你。”
+「好，我答应你。」
 
 听到学姐的回答，我下定决心后，尽可能若无其事地说着：
 
-“其实我有过一次性经验。”
+「其实我有过一次性经验。」
 
 听到我的这句话，学姐一下子张口结舌。
 
-“雨宫同学，你没开玩笑吧？”
+「雨宫同学，你没开玩笑吧？」
 
-“没开玩笑。”
+「没开玩笑。」
 
-“性经验的意思是……和女孩子**做**过？”
+「性经验的意思是……和女孩子**做**过？」
 
-“对。越线的那种**做**。”
+「对。越线的那种**做**。」
 
-“什么时候的事？”
+「什么时候的事？」
 
-“去年。我母亲在大学里从事研究工作，所以我休息日的时候偶尔也会被她带到校园里面——当然，她把我带进去之后就不怎么管我了，只要我按时去找她就行。”
+「去年。我母亲在大学里从事研究工作，所以我休息日的时候偶尔也会被她带到校园里面——当然，她把我带进去之后就不怎么管我了，只要我按时去找她就行。」
 
 听到我的话，学姐露出一副若有所思的样子。
 
-“去年黄金周的某一天……我忘了是哪天了，那天我一个人在校园里瞎逛，最后跑到人工湖边发呆。大概过了一小时吧，我突然发现，身边坐了一个女大学生。”
+「去年黄金周的某一天……我忘了是哪天了，那天我一个人在校园里瞎逛，最后跑到人工湖边发呆。大概过了一小时吧，我突然发现，身边坐了一个女大学生。」
 
-“女大学生？”
+「女大学生？」
 
-“应该是吧。她的表情似乎很忧伤，但我也不清楚原因。不如说，我当时脑子里根本就没在想这个原因，只想着自己家里的那点事——如果那能算是个家的话。”
+「应该是吧。她的表情似乎很忧伤，但我也不清楚原因。不如说，我当时脑子里根本就没在想这个原因，只想着自己家里的那点事——如果那能算是个家的话。」
 
-“雨宫同学的家里……发生了什么吗？”
+「雨宫同学的家里……发生了什么吗？」
 
 我想了想，决定对学姐讲出我所知道的事。
 
-“我的父母之间关系——相当相当的糟糕。两个人之间一年说的话加起来都不会超过二十句——这可能还算多的。一家人也从来没有在一起吃过饭，更准确地说，我就没见过那两个人进过厨房。睡觉也是三个人分在不同的地方睡。那两个人平常绝大多数的时间都呆在各自的工作场所，直到深夜才会回来。”
+「我的父母之间关系——相当相当的糟糕。两个人之间一年说的话加起来都不会超过二十句——这可能还算多的。一家人也从来没有在一起吃过饭，更准确地说，我就没见过那两个人进过厨房。睡觉也是三个人分在不同的地方睡。那两个人平常绝大多数的时间都呆在各自的工作场所，直到深夜才会回来。」
 
 听到我的陈述，渡边学姐陷入了沉默。
 
-“我还很小的时候，那两个人有过一次非常激烈的吵架，从此就变成了我刚才说的这个样子——再之前的记忆我大概已经没有了，不过应该也好不到哪里去。”
+「我还很小的时候，那两个人有过一次非常激烈的吵架，从此就变成了我刚才说的这个样子——再之前的记忆我大概已经没有了，不过应该也好不到哪里去。」
 
-“生活在这样的环境里，雨宫同学应该很难受吧。”
+「生活在这样的环境里，雨宫同学应该很难受吧。」
 
-“上小学的时候我就已经意识到那两个人的离婚只不过是时间问题了。也许我的父母是在等我18岁成人吧，这样对他们各自都能少点麻烦。所以我那个时候就在想，是不是因为自己活着，才束缚了那两个人呢……”
+「上小学的时候我就已经意识到那两个人的离婚只不过是时间问题了。也许我的父母是在等我18岁成人吧，这样对他们各自都能少点麻烦。所以我那个时候就在想，是不是因为自己活着，才束缚了那两个人呢……」
 
-“那种事情才……”
+「那种事情才……」
 
 学姐想要反驳我，但却在中途停住了。我继续说了下去：
 
-“去年我坐在人工湖边的时候，脑子里也冒出了自己是不是就这么淹死会好一点的想法。然而，身体却动不起来。感觉自己在死前，还有一些想做的事。在这样的心态下，我自言自语了起来。”
+「去年我坐在人工湖边的时候，脑子里也冒出了自己是不是就这么淹死会好一点的想法。然而，身体却动不起来。感觉自己在死前，还有一些想做的事。在这样的心态下，我自言自语了起来。」
 
 &emsp;
 
@@ -250,29 +250,29 @@
 
 &emsp;
 
-“雨宫同学知道那个女大学生讲的是什么意思吗？”
+「雨宫同学知道那个女大学生讲的是什么意思吗？」
 
-“当然知道。可能这就是我当时觉得自己想要做的一件事吧——至于对面是谁，我其实无所谓。”
+「当然知道。可能这就是我当时觉得自己想要做的一件事吧——至于对面是谁，我其实无所谓。」
 
-“于是你第二天就和她**做**了吗？”
+「于是你第二天就和她**做**了吗？」
 
-“对。第二天我按照她留下的地址找到了一家情人旅馆，发现穿着一件黑色蕾丝连衣裙的女大学生已经在门口等我了。之后我跟着她上楼走进订好的房间，刚一关上门，她就抱着我吻了上来。不仅如此，她还刻意诱使我触碰她的身体，这时我才发现她的连衣裙下面连内衣都没穿。”
+「对。第二天我按照她留下的地址找到了一家情人旅馆，发现穿着一件黑色蕾丝连衣裙的女大学生已经在门口等我了。之后我跟着她上楼走进订好的房间，刚一关上门，她就抱着我吻了上来。不仅如此，她还刻意诱使我触碰她的身体，这时我才发现她的连衣裙下面连内衣都没穿。」
 
-“大姐姐玩的真够开的。”
+「大姐姐玩的真够开的。」
 
-“之后的事情学姐你应该能想象得到了。在她的全程引导下，我们尝试了好几种姿势——从她在上面开始，到坐位，后背位，最后是正常位。从插入到射出来大概有……我想想，半个小时不到吧。当然，她有让我做好安全措施。”
+「之后的事情学姐你应该能想象得到了。在她的全程引导下，我们尝试了好几种姿势——从她在上面开始，到坐位，后背位，最后是正常位。从插入到射出来大概有……我想想，半个小时不到吧。当然，她有让我做好安全措施。」
 
-“这么久的？雨宫同学是什么感觉？”
+「这么久的？雨宫同学是什么感觉？」
 
-“很难形容。”
+「很难形容。」
 
-“为什么？”
+「为什么？」
 
-“可能是精神紧张的缘故吧，也可能是害怕自己体力不足所以中午吃的多了一点，在**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
+「可能是精神紧张的缘故吧，也可能是害怕自己体力不足所以中午吃的多了一点，在**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——」
 
 我停顿了一下，说出了自己当时的真实感受：
 
-“我**没能从整个过程中感觉到一丝一毫精神上的愉悦感**。”
+「我**没能从整个过程中感觉到一丝一毫精神上的愉悦感**。」
 
 随后，我失落地垂下了头——这种失落感，是我隔着安全套在那个女大学生的身体里射出来的那一刻就感觉到的。
 
@@ -280,33 +280,33 @@
 
 过了一会，她才向我问道：
 
-“那之后呢？你们之后见过面吗？”
+「那之后呢？你们之后见过面吗？」
 
-“我在做完之后稍微睡了一会，等醒过来的时候，那个女大学生已经离开了。她留下的，只有一个打开了的笔记本，上面写着一行字：‘给某天偶然见到的男孩子’。落款是‘Dornröschen’。我后来查了在线翻译，知道这指的是格林童话中的‘睡美人’。”
+「我在做完之后稍微睡了一会，等醒过来的时候，那个女大学生已经离开了。她留下的，只有一个打开了的笔记本，上面写着一行字：『给某天偶然见到的男孩子』。落款是『Dornröschen』。我后来查了在线翻译，知道这指的是格林童话中的『睡美人』。」
 
 在那之后，我再也没有见过她，就宛如她从未出现过一样。
 
 讲完了故事的我，以自己都觉得震惊的苦涩声音问道：
 
-“学姐会不会觉得我很差劲，居然这么轻易就和不认识的女性**做**了？”
+「学姐会不会觉得我很差劲，居然这么轻易就和不认识的女性**做**了？」
 
-“考虑到雨宫同学你的精神状态，似乎也不是不能理解。至于那位大姐姐，我想她当时可能是把和你做爱当成她满足某个需求的一个途径吧。所以**做**完之后，内心获得满足的她也就不再需要和你产生联系了。”
+「考虑到雨宫同学你的精神状态，似乎也不是不能理解。至于那位大姐姐，我想她当时可能是把和你做爱当成她满足某个需求的一个途径吧。所以**做**完之后，内心获得满足的她也就不再需要和你产生联系了。」
 
-“我从这件事得到的唯一教训，就是以后和女孩子**做**——假设我还有这个机会——的时候，**绝对不能把自己喂的太饱**。做到后来，胃里甚至有反酸水的感觉。”
+「我从这件事得到的唯一教训，就是以后和女孩子**做**——假设我还有这个机会——的时候，**绝对不能把自己喂的太饱**。做到后来，胃里甚至有反酸水的感觉。」
 
 听到我严肃到略带悲愤的话，学姐扑哧一声笑了出来。
 
-“这个感悟倒是够有趣的。”
+「这个感悟倒是够有趣的。」
 
-“这样吗？”
+「这样吗？」
 
 我不由得也笑了出来。这时我才发现，从昨天中午开始一直盘旋在我心中的糟糕感觉，此时已然消散无踪。
 
-“说起来，输液应该快结束了。”
+「说起来，输液应该快结束了。」
 
-“要我和雨宫同学你一起回去吗？”
+「要我和雨宫同学你一起回去吗？」
 
-“好啊。”
+「好啊。」
 
 接下来的几分钟里，我们就这样等待着护士的到来。
 
