--- a/vol1/01-11.md
+++ b/vol1/01-11.md
@@ -2,57 +2,57 @@
 
 &emsp;
 
-“身高156cm，体重……42kg。”
+「身高156cm，体重……42kg。」
 
 听到老师报出的数字后，我退后一步回头，恰好看到了工藤。
 
-“雨宫你这体重轻的是不是有点过分了？”
+「雨宫你这体重轻的是不是有点过分了？」
 
-“怎么说呢……去年我记得还是43kg来着。大概这三天把一年来增长的体重都烧没了吧。”
+「怎么说呢……去年我记得还是43kg来着。大概这三天把一年来增长的体重都烧没了吧。」
 
 现在是星期三的上午，一年级的学生们需要在这一天进行体力测试——这可以说是对我而言最为麻烦的一件事了。
 
-“说起来，之前不论是联谊还是野外学习，雨宫你都没有参加啊。因为是室内派所以不喜欢出门吗？”
+「说起来，之前不论是联谊还是野外学习，雨宫你都没有参加啊。因为是室内派所以不喜欢出门吗？」
 
-“倒也不是这回事——或者说，是更半吊子的情况。”
+「倒也不是这回事——或者说，是更半吊子的情况。」
 
-“半吊子？”
+「半吊子？」
 
 工藤露出一副不解其意的表情，我只好详细解释：
 
-“一旦呆在家里时间久了我就会觉得很不适应，所以经常会跑到外面。但一旦在外面转的时间久了，体力又会跟不上，只能回家休息。”
+「一旦呆在家里时间久了我就会觉得很不适应，所以经常会跑到外面。但一旦在外面转的时间久了，体力又会跟不上，只能回家休息。」
 
-与其说“呆在家里时间久了就会觉得很不适应”，说“那个家里我根本就呆不下去”还更加准确。不过这一点就没必要对工藤说明了。
+与其说「呆在家里时间久了就会觉得很不适应」，说「那个家里我根本就呆不下去」还更加准确。不过这一点就没必要对工藤说明了。
 
 我跟着工藤和其他几个男生离开了保健室，一路听着他们讨论着班上女生们的事情。从对话的内容来看，被选为学级委员的工藤和森山同学目前的关系并不算糟。
 
 这时，男生中的一个人突然丢来了一个问题：
 
-“雨宫你觉得胸大点好还是小点好？”
+「雨宫你觉得胸大点好还是小点好？」
 
 ——终究逃不开这类内容吗。我一边在内心吐槽，一边不咸不淡地回应：
 
-“各有各的好处，各有各的坏处吧。”
+「各有各的好处，各有各的坏处吧。」
 
-“你这不是废话吗？”
+「你这不是废话吗？」
 
-“我也知道你们看到胸大的女生会觉得很养眼，不过对当事人来说可就不是这么一回事了。每天的生活都被额外的重量困扰，肩膀会酸的要死，运动的时候就更不用提了。而且，连内衣的款式都不好挑。”
+「我也知道你们看到胸大的女生会觉得很养眼，不过对当事人来说可就不是这么一回事了。每天的生活都被额外的重量困扰，肩膀会酸的要死，运动的时候就更不用提了。而且，连内衣的款式都不好挑。」
 
-“雨宫这话倒是挺有道理的，我们都没往这个方向想。”
+「雨宫这话倒是挺有道理的，我们都没往这个方向想。」
 
-“不过胸小的话……嗯……怎么说呢，虽然没了上面我说的这些问题，但面对其他胸比自己大的女孩子时候总会产生一种精神上的自卑感吧。”
+「不过胸小的话……嗯……怎么说呢，虽然没了上面我说的这些问题，但面对其他胸比自己大的女孩子时候总会产生一种精神上的自卑感吧。」
 
 我本想继续说下去，但这时对面走来了以森山同学为首的几个女生，只好赶紧住嘴。在令人尴尬的沉默中，两个小群体交错而过。
 
 当女生们完全走到我们身后之后不久，我们停下脚步扭头看去。白色的体操服下面，内衣的轮廓隐约可见——至少在我的眼中是这样。
 
-“说起来，公主大人这么一看还挺有料的。”
+「说起来，公主大人这么一看还挺有料的。」
 
-“你们声音能不能小点，真以为人家听不到吗？雨宫，你说是不是？”
+「你们声音能不能小点，真以为人家听不到吗？雨宫，你说是不是？」
 
 真不知道工藤为什么非要让我来给自己解围。我仔细斟酌着词语回答：
 
-“这种该怎么说呢，嗯……如果女生真的对一个男生有好感的话，那么这个男生的缺点在她眼里也会显得非常可爱。如果没有好感，那么这个男生就算再帅气，女生还是会在心中对他横挑竖拣。当然，如果把性别对调的话，也是一样的道理。行了，我们赶紧走吧，不然就赶不上后面的测试项目了。”
+「这种该怎么说呢，嗯……如果女生真的对一个男生有好感的话，那么这个男生的缺点在她眼里也会显得非常可爱。如果没有好感，那么这个男生就算再帅气，女生还是会在心中对他横挑竖拣。当然，如果把性别对调的话，也是一样的道理。行了，我们赶紧走吧，不然就赶不上后面的测试项目了。」
 
 听到我的催促，男生们又向电梯走去。走在他们边上的我，不知何时又将双手抱在了胸前，在尽可能跟上他们的脚步的同时，脑子里却只想着一件事。
 
@@ -60,9 +60,9 @@
 
 &emsp;
 
-“说起来，雨宫你身体没问题吗？看你在室内项目的表现，似乎完成的挺吃力的。”
+「说起来，雨宫你身体没问题吗？看你在室内项目的表现，似乎完成的挺吃力的。」
 
-“只能说还在恢复吧。按医生说法，估计要星期五才能彻底好起来，这几天放学之后还是得去挂点滴。”
+「只能说还在恢复吧。按医生说法，估计要星期五才能彻底好起来，这几天放学之后还是得去挂点滴。」
 
 完成了室内项目的我们，现在正走在通向体育场的路上。
 
@@ -76,21 +76,21 @@
 
 学生群里组织的人气投票，女生榜的前三名中，排在第一名的朝仓しずく学姐身为学生会长明年就要毕业，显然不可能有足够的时间拉近关系；而排在第三名的柏原同学是中等部的学生，可能在工藤看来，主动追求年纪比自己小太多的女孩子并不符合他的作风。所以，年龄相仿又恰好分在同一个班的森山同学，就成了合适的追求目标。
 
-“说起来，雨宫你准备选长跑还是往复跑？”
+「说起来，雨宫你准备选长跑还是往复跑？」
 
-“……让我想想。”
+「……让我想想。」
 
 室外的体测项目同样是四项。共通的三项是立定跳远、掷手球和50米跑，剩下一项则在20米往复跑和长跑之间二选一。
 
 病还没有完全好的我，耐力只会比平常更差。如果是长跑的话，别说跑出一个不算难看的成绩了，能不能坚持到1500米跑完都是个问题。在心里决定了选项之后，我对工藤说道：
 
-“我大概会选往复跑吧，长跑我怕撑不下来。”
+「我大概会选往复跑吧，长跑我怕撑不下来。」
 
 听到我的决定，工藤伸出手想拍拍我的肩膀，但中途又缩了回去。
 
-“……加油。”
+「……加油。」
 
-“……谢谢啦。”
+「……谢谢啦。」
 
 我勉强挤出一个笑容，试图回应工藤的关心。
 
@@ -110,13 +110,13 @@
 
 随着一个冰冷的声音，他们的表情一下子变得冷漠，仿佛正在看着一个憎恨之极却又不得不一起生活的人——没错，那个人正是我。
 
-“各就各位——”
+「各就各位——」
 
 ——只要我消失的话，你们就自由了吧。
 
 我睁开了双眼。这样的心理暗示，对我已经足够了。
 
-“预备——”
+「预备——」
 
 随着起跑的发令声，我猛然踏动地面，开始向前奔跑。
 
@@ -124,23 +124,23 @@
 
 当我终于停下来的时候，整个人已经冲出了跑道。我双膝跪地，用手撑住地面，大口呼吸着空气。
 
-“6、6.9秒！”
+「6、6.9秒！」
 
 站起身来的我听到了高处传来的成绩，而跑道两边的女生们的尖叫，则完全没有传到我耳边。
 
 当我沿着跑道回到终点线旁边时，工藤从一旁冲了过来。
 
-“雨宫你刚才那是怎么一回事？不是没什么体力的吗？这成绩未免也太吓人了吧？”
+「雨宫你刚才那是怎么一回事？不是没什么体力的吗？这成绩未免也太吓人了吧？」
 
-“我想大概是瞬间的爆发力起了作用吧。”
+「我想大概是瞬间的爆发力起了作用吧。」
 
-“如果你参加今年的运动会的话，我们班说不准能拿到不错的成绩呢！”
+「如果你参加今年的运动会的话，我们班说不准能拿到不错的成绩呢！」
 
-“要跑哪个？长跑我跑不了，难不成是接力？”
+「要跑哪个？长跑我跑不了，难不成是接力？」
 
-“接力的话你应该问题不大吧？毕竟每个人只用跑400米。”
+「接力的话你应该问题不大吧？毕竟每个人只用跑400米。」
 
-“可能得临时练一下，毕竟我未必能撑这么久。”
+「可能得临时练一下，毕竟我未必能撑这么久。」
 
 没错，像刚才一样的爆发力用在100米的短跑上问题不大，200米勉强也可以，但恰好卡在我耐力极限上的400米可能就有点麻烦了。
 
